force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/NPN_PartnerAttributes_Modifiaction__c.object-meta.xml
<CustomObject>
    <description>Add On Competency, Promotion, Demotion Using DocuSign</description>
    <label>NPN_PartnerAttributes_Modification</label>
    <nameField>
        <label>NPN_PartnerAttributes_DocuSignSync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPN_PartnerAttributes_Modifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>