force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NPN_PartnerAttributes_Modifiactions</relationshipName>
    <type>Lookup</type>
</CustomField>