force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Account_Address_Line_2_for_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Line_2_for_DocuSign__c</fullName>
    <formula>Account__r.BillingCity &amp;&quot; &quot; &amp; Account__r.BillingState &amp; &quot; &quot; &amp; Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address Line 2 for DocuSign</label>
    <type>Text</type>
</CustomField>