force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Account_Address_Line_3_for_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Line_3_for_DocuSign__c</fullName>
    <formula>Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address Line 3 for DocuSign</label>
    <type>Text</type>
</CustomField>