force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Account_Name_for_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_DocuSign__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name for DocuSign</label>
    <type>Text</type>
</CustomField>