force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/AccountNamewithCompetencySignedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountNamewithCompetencySignedDate__c</fullName>
    <formula>&quot;NVIDIA Partner Network Agreement by and between NVIDIA Corporation&quot;&amp;
&quot;(“NVIDIA”) &quot; &amp; Account__r.Name &amp; &quot;(“Partner”) dated &quot; &amp;
Case(MONTH(Account__r.NPN_Program_Signed_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp;&quot; &quot; &amp; TEXT(DAY (Account__r.NPN_Program_Signed_Date__c)) &amp;&quot;, &quot;&amp;TEXT(YEAR(Account__r.NPN_Program_Signed_Date__c))
&amp; &quot; (the “Agreement”)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountNamewithCompetencySignedDate</label>
    <type>Text</type>
</CustomField>