force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPN_PartnerAttributes_Modifiactions</relationshipName>
    <type>Lookup</type>
</CustomField>