force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Competency_Level__c.field-meta.xml
<CustomField>
    <fullName>Competency_Level__c</fullName>
    <label>Competency_Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>