force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Competency_Termination_30_days_Complete__c.field-meta.xml
<CustomField>
    <fullName>Competency_Termination_30_days_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competency Termination 30 days Complete</label>
    <type>Checkbox</type>
</CustomField>