force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/CompetencyExhibitWithAccNameAndCompDate__c.field-meta.xml
<CustomField>
    <fullName>CompetencyExhibitWithAccNameAndCompDate__c</fullName>
    <formula>lEFT((
IF (INCLUDES( Competency__c ,&quot;Compute&quot; ),&quot; Compute Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Visualization&quot;), &quot; Visualization Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Compute DGX&quot;), &quot; Compute DGX Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;DGX&quot;), &quot; DGX Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Embedded Edge&quot;), &quot; Embedded Edge Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Virtualization&quot; ), &quot; Virtualization Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null)),
LEN(
IF (INCLUDES( Competency__c ,&quot;Compute&quot; ),&quot; Compute Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Visualization&quot;), &quot; Visualization Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Compute DGX&quot;), &quot; Compute DGX Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;DGX&quot;), &quot; DGX Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Embedded Edge&quot;), &quot; Embedded Edge Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Virtualization&quot; ), &quot; Virtualization Competency Exhibit for &quot; &amp; Text(Program_Type__c) &amp; &quot; &amp; &quot;,null)
)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompetencyExhibitWithAccNameAndCompDate</label>
    <type>Text</type>
</CustomField>