force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/CompetencyLevelTermination__c.field-meta.xml
<CustomField>
    <fullName>CompetencyLevelTermination__c</fullName>
    <formula>Text( Competency_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompetencyLevelTermination</label>
    <type>Text</type>
</CustomField>