force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Contact_Title_for_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_for_DocuSign__c</fullName>
    <formula>Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Title for DocuSign</label>
    <type>Text</type>
</CustomField>