force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <label>ContactEmail</label>
    <type>Email</type>
</CustomField>