force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/CSP_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>CSP_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the CSP sell to other CSPs</label>
    <type>Checkbox</type>
</CustomField>