force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/CurrentDatePlus30day_date__c.field-meta.xml
<CustomField>
    <fullName>CurrentDatePlus30day_date__c</fullName>
    <formula>Case(MONTH(TODAY() + 30), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 
&amp;&quot; &quot; &amp; TEXT(DAY (TODAY() + 30)) &amp;&quot;, &quot;&amp;TEXT(YEAR(TODAY() + 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentDatePlus30day_date</label>
    <type>Text</type>
</CustomField>