force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Description_For_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Description_For_Promotion__c</fullName>
    <formula>&quot;As a &quot;&amp; TEXT(Competency_Level__c) &amp;&quot; level partner, there are additional program benefits and requirements, which can be found in detail in the NPN Partner Program Guide.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description_For_Promotion</label>
    <type>Text</type>
</CustomField>