force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Docusign_Competency_Level_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Competency_Level_Promotion__c</fullName>
    <formula>&quot;status has been changed to the &quot; &amp; Text( Competency_Level__c )&amp; &quot; level effective &quot;
&amp; TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp;
Case(MONTH(TODAY()),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp;&quot; &quot; &amp;TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Competency_Level_Promotion</label>
    <type>Text</type>
</CustomField>