force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/DocuSign_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_ID__c</fullName>
    <label>DocuSign Envelope ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>