force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Docusign_Line_FirstLastname__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_FirstLastname__c</fullName>
    <formula>&quot;Attention: &quot; &amp;  Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Line FirstLastname</label>
    <type>Text</type>
</CustomField>