force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Docusign_Line_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_Firstname__c</fullName>
    <formula>&quot;Dear &quot; &amp;  Contact__r.FirstName  &amp;&quot;, &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Line Firstname</label>
    <type>Text</type>
</CustomField>