force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Docusign_Line_for_Competency_Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_for_Competency_Exhibit__c</fullName>
    <formula>&quot;Competency Exhibit(s): &quot;
&amp;
lEFT((
IF (INCLUDES( Competency__c ,&quot;Compute&quot; ),&quot; Compute,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Visualization&quot;), &quot; Visualization,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Compute DGX&quot;), &quot; Compute DGX,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;DGX&quot;), &quot; DGX,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Virtualization&quot; ), &quot; Virtualization ,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Embedded Edge&quot; ), &quot; Embedded Edge ,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Healthcare&quot; ), &quot; Healthcare ,&quot;,null) &amp; &quot; Exhibit &quot;
),LEN(
IF (INCLUDES(Competency__c ,&quot;Compute&quot; ),&quot; Compute,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Visualization&quot;), &quot; Visualization,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Compute DGX&quot;), &quot; Compute DGX,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;DGX&quot;), &quot; DGX,&quot;,null) &amp;
IF (INCLUDES(Competency__c ,&quot;Virtualization&quot; ), &quot; Virtualization ,&quot;,null)&amp;
IF (INCLUDES(Competency__c ,&quot;Embedded Edge&quot; ), &quot; Embedded Edge ,&quot;,null)&amp;
IF (INCLUDES(Competency__c ,&quot;Healthcare&quot; ), &quot; Healthcare ,&quot;,null)
)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Line for Competency Exhibit</label>
    <type>Text</type>
</CustomField>