force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Level_Description_for_Demotion__c.field-meta.xml
<CustomField>
    <fullName>Level_Description_for_Demotion__c</fullName>
    <formula>&quot;The &quot; &amp; Text (Competency_Level__c) &amp;&quot; level membership offers many program benefits, which can be found in detail in the NPN Partner Program Guide.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Description for Demotion</label>
    <type>Text</type>
</CustomField>