force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/PartnerAttributes_Modification__c.field-meta.xml
<CustomField>
    <fullName>PartnerAttributes_Modification__c</fullName>
    <label>PartnerAttributes_Modification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add On Contracts Packet</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Demotion</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Competency Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>