force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/PartnerProgramnameforPromoDemo__c.field-meta.xml
<CustomField>
    <fullName>PartnerProgramnameforPromoDemo__c</fullName>
    <formula>&quot;Re: NVIDIA Partner Network Partner Program&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Program name for PromoDemo</label>
    <type>Text</type>
</CustomField>