force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/PBMDetailforCompTermination__c.field-meta.xml
<CustomField>
    <fullName>PBMDetailforCompTermination__c</fullName>
    <formula>&quot;your NVIDIA Partner Business Manager,  &quot;
&amp;
AccountOwner__r.FirstName  &amp; &quot; &quot; &amp; AccountOwner__r.LastName &amp; &quot; on &quot; &amp; 

IF (ISBLANK(AccountOwner__r.Phone),(AccountOwner__r.MobilePhone),(AccountOwner__r.Phone) ) 

&amp; &quot; or &quot; &amp; AccountOwner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBMDetailforCompTermination</label>
    <type>Text</type>
</CustomField>