force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/PBMDetails_Docusign__c.field-meta.xml
<CustomField>
    <fullName>PBMDetails_Docusign__c</fullName>
    <formula>AccountOwner__r.FirstName  &amp; &quot; &quot; &amp; AccountOwner__r.LastName &amp; &quot; on &quot; &amp; 

IF (ISBLANK(AccountOwner__r.Phone),(AccountOwner__r.MobilePhone),(AccountOwner__r.Phone) ) 

&amp; &quot; or &quot; &amp; AccountOwner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBMDetails_Docusign</label>
    <type>Text</type>
</CustomField>