force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/PBMDetailsForDemotion__c.field-meta.xml
<CustomField>
    <fullName>PBMDetailsForDemotion__c</fullName>
    <formula>&quot;If you have questions, please contact your NVIDIA Partner Business Manager, &quot;
&amp;
AccountOwner__r.FirstName &amp; &quot; &quot; &amp; AccountOwner__r.LastName &amp; &quot; on &quot; &amp;
IF (ISBLANK(AccountOwner__r.Phone),(AccountOwner__r.MobilePhone),(AccountOwner__r.Phone) )
&amp; &quot; or &quot; &amp; AccountOwner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBMDetailsForDemotion</label>
    <type>Text</type>
</CustomField>