force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Promotion_Description_Last_Line__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Description_Last_Line__c</fullName>
    <formula>&apos;On behalf of NVIDIA, we appreciate your partnership and thank you for your continued participation in the NVIDIA Partner Network Program and look forward to continuing to partner with your organization.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion_Description_Last_Line</label>
    <type>Text</type>
</CustomField>