force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/PromotionLineafterFirstname__c.field-meta.xml
<CustomField>
    <fullName>PromotionLineafterFirstname__c</fullName>
    <formula>&quot;This communication is to notify your organization that the:&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Line after First name</label>
    <type>Text</type>
</CustomField>