force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/SubProgram_Type__c.field-meta.xml
<CustomField>
    <fullName>SubProgram_Type__c</fullName>
    <label>SubProgram Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDU Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Data Center Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>