force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/Termination_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Termination_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination Initiated</label>
    <type>Checkbox</type>
</CustomField>