force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/TerminationLetterfirstParagraph__c.field-meta.xml
<CustomField>
    <fullName>TerminationLetterfirstParagraph__c</fullName>
    <formula>&quot;At this time it does not appear that our companies business models are aligned. Therefore, pursuant to the above-referenced Agreement, NVIDIA is hereby providing Partner with written notice of termination of the Agreement. Under the terms of the Agreement, this termination will become effective on &quot;
&amp;Case(MONTH(DATEVALUE(CreatedDate)+ 30),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp;&quot; &quot; &amp; TEXT(DAY (DATEVALUE(CreatedDate)+ 30)) &amp;&quot;, &quot;&amp;TEXT(YEAR(DATEVALUE(CreatedDate) + 30)) &amp; &quot;(“Termination Date”).&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerminationLetterfirstParagraph</label>
    <type>Text</type>
</CustomField>