force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/TerminationLetterSecondParagraph__c.field-meta.xml
<CustomField>
    <fullName>TerminationLetterSecondParagraph__c</fullName>
    <formula>&quot;We know that business strategies can change and evolve over time. Should you like your organization to be reconsidered for membership in the NPN Partner program, please reach back out to us.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerminationLetterSecondParagraph</label>
    <type>Text</type>
</CustomField>