force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/TerminationLetterThirdParagraph__c.field-meta.xml
<CustomField>
    <fullName>TerminationLetterThirdParagraph__c</fullName>
    <formula>&quot;On behalf of NVIDIA, thank you for your participation in the NVIDIA Partner Network. If you have questions or concerns regarding this matter, please contact us at npn@nvidia.com.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerminationLetterThirdParagraph</label>
    <type>Text</type>
</CustomField>