force-app/main/default/objects/NPN_PartnerAttributes_Modifiaction__c/fields/VP_Title_for_Docusign__c.field-meta.xml
<CustomField>
    <fullName>VP_Title_for_Docusign__c</fullName>
    <formula>&quot;VP, NPN Programs and GTM Strategy&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Title for Docusign</label>
    <type>Text</type>
</CustomField>